Opened 19 years ago

Closed 19 years ago

Last modified 19 years ago

#830 closed bug (fixed)

Input server crash

Reported by: marcusoverhagen Owned by: axeld
Priority: critical Milestone: R1
Component: - General Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: x86

Description

input_server does crash when opening the AT keyboard device failes.

That opening failed is correct because UBS drivers and usb_hid disables the BIOS legacy PS2 emulation.

ps2: devfs_publish_device input/keyboard/at/0, status = 0x00000000
ps2: devfs_publish_device input/mouse/ps2/0, status = 0x00000000
bfs: bfs_open_dir:1463: Invalid Argument
ps2: keyboard_open input/keyboard/at/0
ps2: ps2_dev_command cmd 0xff, out 0, in 1, dev input/keyboard/at/0
ps2: ps2_dev_command wait for ack res 0x00000000, wait-time 83566
ps2: ps2_dev_command got NACK
ps2: ps2_dev_command result 0xffffffff
ps2: keyboard reset failed, status 0xffffffff, data 0x80
ps2: keyboard probing failed
ps2: keyboard_open input/keyboard/at/0 failed
ps2: devfs_unpublish_device input/keyboard/at/0, status = 0x00000000
vm_soft_fault: va 0x70142fa5 not covered by area in address space
vm_page_fault: vm_soft_fault returned error -2147478783 on fault at 0x70142fa5, ip 0x6892a0, write 1, user 1, thread 0x6f
vm_page_fault: sending team "/boot/beos/system/servers/input" 0x28 SIGSEGV, ip 0x6892a0 ("keyboard_seg0ro" +0x72a0)

Change History (2)

comment:1 by axeld, 19 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev18694. The keyboard device add-on did not expect scancodes greater than 255, and crashed the server when they finally arrived (scancode is of type uint32).

comment:2 by marcusoverhagen, 19 years ago

verified, works now.

Note: See TracTickets for help on using tickets.