Made the keyboard device more resistant against any kind of error: * Scancodes greater 255 are now handled correctly, and will no longer crash   the input_server. This fixes bug #830. * Use new (std:nothrow) instead of a simple new * Now checks all allocations and appropriately handle failure * Cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@18694 a95241bf-73f2-0310-859d-f6bbb57e9c96